# japan-utils-mcp

./: Dockerfile  LICENSE  README.md  SUBMISSIONS.md  pyproject.toml  server.json
.github/workflows/: publish.yml
src/japan_utils_mcp/: __init__.py  server.py
